--- a/content/Experience.html
+++ b/content/Experience.html
@@ -133,11 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Onshape.html'>Next</a> >> Onshape<br /><h1>Introduction</h1>
-<p>專題題目 : 小火車</p>
-<p>第一位組員學號: 40623121 </p>
-<p>第二位組員學號: 40523252</p>
-<br /> <a href='Onshape.html'>Next</a> >> Onshape</div>
+    <div id="tipue_search_content">V-rep << <a href='V-rep.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2<br /><h1>Experience</h1>
+<br />V-rep << <a href='V-rep.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2</div>
         
     <!-- footer -->
       <div class="container">
