--- a/content/Final Report.html
+++ b/content/Final Report.html
@@ -102,14 +102,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>cmstemplate</h1>
+                <h1>2021-協同產品設計實習-stage1-ag2</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">cmstemplate</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">2021-協同產品設計實習-stage1-ag2</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li><a href='Onshape.html'>Onshape</a><li><a href='V-rep.html'>V-rep</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>About</h1><p>This is <a href="https://github.com/mdecourse/cmstemplate">https://github.com/mdecourse/cmstemplate</a></p><p>目前的 cmsimde 在編輯器下方新增一個 csave 按鈕, 意即 collabrative save, 當動態網際管理系統在多人同時維護登入維護網頁內容時, 編輯各頁面時段, 該頁面可能已經改版, 因此使用 csave 按鈕存檔時, 會導入當下最新的該頁面內容, 並試圖與編輯中的頁面內容進行合併.</p><p>使用 csave 按鈕存檔無法刪除頁面資料.</p><p>使用 Edit All 模式, 無法使用 csave 按鈕（尚未測試).</p><p></p><p></p><br /> </div>
+    <div id="tipue_search_content">Week4 << <a href='Week4.html'>Previous</a> <br /><h1>Final Report</h1>
+<p></p>
+<p></p><br />Week4 << <a href='Week4.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
