--- a/content/Week2.html
+++ b/content/Week2.html
@@ -133,11 +133,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Onshape.html'>Next</a> >> Onshape<br /><h1>Introduction</h1>
-<p>專題題目 : 小火車</p>
-<p>第一位組員學號: 40623121 </p>
-<p>第二位組員學號: 40523252</p>
-<br /> <a href='Onshape.html'>Next</a> >> Onshape</div>
+    <div id="tipue_search_content">Experience << <a href='Experience.html'>Previous</a> <a href='Week3.html'>Next</a> >> Week3<br /><h1>Week2</h1>
+<p>40623121 : </p>
+<p></p>
+<p>這週訂下了專題題目，一開始還沒辦法馬上進入狀況，還在熟悉軟體使用方法，準備在下週開始用Onshape繪製零件，在組員互相幫助下，會一起努力完成專題題目的。</p>
+<p></p>
+<br />Experience << <a href='Experience.html'>Previous</a> <a href='Week3.html'>Next</a> >> Week3</div>
         
     <!-- footer -->
       <div class="container">
