--- a/content/Week4.html
+++ b/content/Week4.html
@@ -133,11 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Onshape.html'>Next</a> >> Onshape<br /><h1>Introduction</h1>
-<p>專題題目 : 小火車</p>
-<p>第一位組員學號: 40623121 </p>
-<p>第二位組員學號: 40523252</p>
-<br /> <a href='Onshape.html'>Next</a> >> Onshape</div>
+    <div id="tipue_search_content">Week3 << <a href='Week3.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report<br /><h1>Week4</h1>
+<br />Week3 << <a href='Week3.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report</div>
         
     <!-- footer -->
       <div class="container">
