--- a/content/Final Report.html
+++ b/content/Final Report.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li><a href='Onshape.html'>Onshape</a><li><a href='V-rep.html'>V-rep</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li><a href='Assemble.html'>Assemble</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,9 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week4 << <a href='Week4.html'>Previous</a> <br /><h1>Final Report</h1>
+    <div id="tipue_search_content">Week3 << <a href='Week3.html'>Previous</a> <br /><h1>Final Report</h1>
+<p>youtube : </p>
+<p><a href="./../downloads/2021-協同產品設計實習-stage1-ag2.pdf">pdf</a></p>
 <p></p>
-<p></p><br />Week4 << <a href='Week4.html'>Previous</a> </div>
+<p></p><br />Week3 << <a href='Week3.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
