--- a/content/Week2.html
+++ b/content/Week2.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li><a href='Onshape.html'>Onshape</a><li><a href='V-rep.html'>V-rep</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li><a href='Assemble.html'>Assemble</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -136,7 +136,11 @@ img.add_border {
     <div id="tipue_search_content">Experience << <a href='Experience.html'>Previous</a> <a href='Week3.html'>Next</a> >> Week3<br /><h1>Week2</h1>
 <p>40623121 : </p>
 <p></p>
-<p>這週訂下了專題題目，一開始還沒辦法馬上進入狀況，還在熟悉軟體使用方法，準備在下週開始用Onshape繪製零件，在組員互相幫助下，會一起努力完成專題題目的。</p>
+<p>這週要訂下了專題題目，一開始還沒辦法馬上進入狀況，還在熟悉軟體使用方法，準備開始繪製零件，<span>這禮拜我</span><span>畫了機體、飛彈、輪子等等，因為表面結構複雜細節又很多</span><span>，所以在繪製零件時花太多時間了，但是我還是會努力畫完，</span>在組員互相幫助下，會一起努力完成專題題目的。</p>
+<p>遇到的問題: </p>
+<p>1.不知道選什麼題目(解決辦法 : 就選自己喜歡的吧)</p>
+<p>2.繪製零件時常常出現特徵錯誤或是不如預期(解決辦法 : 熬夜趕圖。)</p>
+<p></p>
 <p></p>
 <br />Experience << <a href='Experience.html'>Previous</a> <a href='Week3.html'>Next</a> >> Week3</div>
         
