--- a/content/Assemble.html
+++ b/content/Assemble.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li><a href='Onshape.html'>Onshape</a><li><a href='V-rep.html'>V-rep</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li><a href='Assemble.html'>Assemble</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Introduction << <a href='Introduction.html'>Previous</a> <a href='V-rep.html'>Next</a> >> V-rep<br /><h1>Onshape</h1>
-<br />Introduction << <a href='Introduction.html'>Previous</a> <a href='V-rep.html'>Next</a> >> V-rep</div>
+    <div id="tipue_search_content">Introduction << <a href='Introduction.html'>Previous</a> <a href='CoppeliaSim.html'>Next</a> >> CoppeliaSim<br /><h1>Assemble</h1>
+<p></p>
+<p>這次專題是使用inventor繪製零件圖並組合，參考自F-16的戰鬥機。</p>
+<p><img alt="" height="263" src="./../images/Plane.jpg" width="450"/></p>
+<p>繪製的STL檔 : <a href="./../downloads/plane.stl">圖檔</a></p>
+<p><img alt="" height="267" src="./../images/組合.png" width="447"/></p>
+<br />Introduction << <a href='Introduction.html'>Previous</a> <a href='CoppeliaSim.html'>Next</a> >> CoppeliaSim</div>
         
     <!-- footer -->
       <div class="container">
