--- a/content/Experience.html
+++ b/content/Experience.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li><a href='Onshape.html'>Onshape</a><li><a href='V-rep.html'>V-rep</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li><a href='Assemble.html'>Assemble</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,8 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">V-rep << <a href='V-rep.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2<br /><h1>Experience</h1>
-<br />V-rep << <a href='V-rep.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2</div>
+    <div id="tipue_search_content">CoppeliaSim << <a href='CoppeliaSim.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2<br /><h1>Experience</h1>
+<br />CoppeliaSim << <a href='CoppeliaSim.html'>Previous</a> <a href='Week2.html'>Next</a> >> Week2</div>
         
     <!-- footer -->
       <div class="container">
