--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -116,8 +116,8 @@ end </pre>
 <p></p>
 <p>這週要訂下了專題題目，一開始還沒辦法馬上進入狀況，還在熟悉軟體使用方法，準備開始繪製零件，<span>這禮拜我</span><span>畫了機體、飛彈、輪子等等，因為表面結構複雜細節又很多</span><span>，所以在繪製零件時花太多時間了，但是我還是會努力畫完，</span>在組員互相幫助下，會一起努力完成專題題目的。</p>
 <p>遇到的問題: </p>
-<p>1.不知道選什麼題目</p>
-<p>2.繪製零件時常常出現特徵錯誤或是不如預期。</p>
+<p>1.不知道選什麼題目(解決辦法 : 就選自己喜歡的吧)</p>
+<p>2.繪製零件時常常出現特徵錯誤或是不如預期(解決辦法 : 熬夜趕圖。)</p>
 <p></p>
 <p></p>
 <h2>Week3</h2>
@@ -125,8 +125,8 @@ end </pre>
 <p></p>
 <p>這週已經繪製好零件了，開始著手在使用coppeliasim了，<span>這週在練習使用軟體，使用下來有大半時間都在對老師給的參考資料進行翻譯、理解，雖然真的花費很多時間，甚至一度想放棄，但還是很努力堅持下來一個一個慢慢去解讀，也開始編排要報告的pdf。</span></p>
 <p><span>遇到的問題:</span></p>
-<p><span>1.代入程式碼後模擬時機體並沒有如預期的作動，只好改成做鍵盤操控飛機。</span></p>
-<p><span>2.因不熟悉軟體所以會發生模擬時零件亂飛，本體亂動。</span></p>
+<p><span>1.代入程式碼後模擬時機體並沒有如預期的作動(解決辦法 : 改成做使用鍵盤操控飛機。)</span></p>
+<p><span>2.因不熟悉軟體所以會發生模擬時零件亂飛，本體亂動。(解決辦法 : 嘗試將各個零件設為動態物件或非動態物件)</span></p>
 <p></p>
 <h1>Final Report</h1>
 <p>youtube : </p>
