--- a/content/CoppeliaSim.html
+++ b/content/CoppeliaSim.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li><a href='Assemble.html'>Assemble</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li><a href='Assemble.html'>Assemble</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li class='has-children'><a href='Final Report.html'>Final Report</a><ul class='dropdown'><li><a href='Youtube.html'>Youtube</a><li><a href='PDF.html'>PDF</a></li>
                       </ul>
                 </nav>
               </div>
