--- a/content/Final Report.html
+++ b/content/Final Report.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li><a href='Assemble.html'>Assemble</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li><a href='Assemble.html'>Assemble</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li class='has-children'><a href='Final Report.html'>Final Report</a><ul class='dropdown'><li><a href='Youtube.html'>Youtube</a><li><a href='PDF.html'>PDF</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,11 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week3 << <a href='Week3.html'>Previous</a> <br /><h1>Final Report</h1>
-<p>youtube : </p>
-<p><a href="./../downloads/2021-協同產品設計實習-stage1-ag2.pdf">pdf</a></p>
-<p></p>
-<p></p><br />Week3 << <a href='Week3.html'>Previous</a> </div>
+    <div id="tipue_search_content">Week3 << <a href='Week3.html'>Previous</a> <a href='Youtube.html'>Next</a> >> Youtube<br /><h1>Final Report</h1>
+<br />Week3 << <a href='Week3.html'>Previous</a> <a href='Youtube.html'>Next</a> >> Youtube</div>
         
     <!-- footer -->
       <div class="container">
