--- a/content/PDF.html
+++ b/content/PDF.html
@@ -133,13 +133,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Introduction << <a href='Introduction.html'>Previous</a> <a href='CoppeliaSim.html'>Next</a> >> CoppeliaSim<br /><h1>Assemble</h1>
+    <div id="tipue_search_content">Youtube << <a href='Youtube.html'>Previous</a> <br /><h1>PDF</h1>
+<p><a href="./../downloads/2021-協同產品設計實習-stage1-ag2.pdf">pdf</a></p>
 <p></p>
-<p>這次專題是使用inventor繪製零件圖並組合，參考自F-16的戰鬥機。</p>
-<p><img alt="" height="263" src="./../images/Plane.jpg" width="450"/></p>
-<p>繪製的STL檔 : <a href="./../downloads/plane.stl">圖檔</a></p>
-<p><img alt="" height="267" src="./../images/組合.png" width="447"/></p>
-<br />Introduction << <a href='Introduction.html'>Previous</a> <a href='CoppeliaSim.html'>Next</a> >> CoppeliaSim</div>
+<p></p><br />Youtube << <a href='Youtube.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
