--- a/content/Week3.html
+++ b/content/Week3.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Introduction.html'>Introduction</a><li><a href='Assemble.html'>Assemble</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='Introduction.html'>Introduction</a><li><a href='Assemble.html'>Assemble</a><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li class='has-children'><a href='Experience.html'>Experience</a><ul class='dropdown'><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a></li></ul><li class='has-children'><a href='Final Report.html'>Final Report</a><ul class='dropdown'><li><a href='Youtube.html'>Youtube</a><li><a href='PDF.html'>PDF</a></li>
                       </ul>
                 </nav>
               </div>
@@ -136,7 +136,7 @@ img.add_border {
     <div id="tipue_search_content">Week2 << <a href='Week2.html'>Previous</a> <a href='Final Report.html'>Next</a> >> Final Report<br /><h1>Week3</h1>
 <p>40623121 : </p>
 <p></p>
-<p>這週已經繪製好零件了，開始著手在使用coppeliasim了，<span>這週在練習使用軟體，使用下來有大半時間都在對老師給的參考資料進行翻譯、理解，雖然真的花費很多時間，甚至一度想放棄，但還是很努力堅持下來一個一個慢慢去解讀，也開始編排要報告的pdf。</span></p>
+<p>這週已經繪製好零件了，開始著手在使用coppeliasim了，<span>這週在練習使用軟體，使用下來有大半時間都在對老師給的參考資料進行翻譯、理解，雖然真的花費很多時間，甚至一度想放棄，但還是很努力堅持下來一個一個慢慢去解讀，也開始編排要報告的pdf，然後希望有好心人在下一次分組專題願意收留我。</span></p>
 <p><span>遇到的問題:</span></p>
 <p><span>1.代入程式碼後模擬時機體並沒有如預期的作動(解決辦法 : 改成做使用鍵盤操控飛機。)</span></p>
 <p><span>2.因不熟悉軟體所以會發生模擬時零件亂飛，本體亂動。(解決辦法 : 嘗試將各個零件設為動態物件或非動態物件)</span></p>
