--- a/content/Youtube.html
+++ b/content/Youtube.html
@@ -133,13 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Introduction << <a href='Introduction.html'>Previous</a> <a href='CoppeliaSim.html'>Next</a> >> CoppeliaSim<br /><h1>Assemble</h1>
+    <div id="tipue_search_content">Final Report << <a href='Final Report.html'>Previous</a> <a href='PDF.html'>Next</a> >> PDF<br /><h1>Youtube</h1>
 <p></p>
-<p>這次專題是使用inventor繪製零件圖並組合，參考自F-16的戰鬥機。</p>
-<p><img alt="" height="263" src="./../images/Plane.jpg" width="450"/></p>
-<p>繪製的STL檔 : <a href="./../downloads/plane.stl">圖檔</a></p>
-<p><img alt="" height="267" src="./../images/組合.png" width="447"/></p>
-<br />Introduction << <a href='Introduction.html'>Previous</a> <a href='CoppeliaSim.html'>Next</a> >> CoppeliaSim</div>
+<p>youtube影片:</p>
+<p></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QmZ_ai0HMuE" width="560"></iframe></p>
+<p></p>
+<br />Final Report << <a href='Final Report.html'>Previous</a> <a href='PDF.html'>Next</a> >> PDF</div>
         
     <!-- footer -->
       <div class="container">
