--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -123,13 +123,19 @@ end </pre>
 <h2>Week3</h2>
 <p>40623121 : </p>
 <p></p>
-<p>這週已經繪製好零件了，開始著手在使用coppeliasim了，<span>這週在練習使用軟體，使用下來有大半時間都在對老師給的參考資料進行翻譯、理解，雖然真的花費很多時間，甚至一度想放棄，但還是很努力堅持下來一個一個慢慢去解讀，也開始編排要報告的pdf。</span></p>
+<p>這週已經繪製好零件了，開始著手在使用coppeliasim了，<span>這週在練習使用軟體，使用下來有大半時間都在對老師給的參考資料進行翻譯、理解，雖然真的花費很多時間，甚至一度想放棄，但還是很努力堅持下來一個一個慢慢去解讀，也開始編排要報告的pdf，然後希望有好心人在下一次分組專題願意收留我。</span></p>
 <p><span>遇到的問題:</span></p>
 <p><span>1.代入程式碼後模擬時機體並沒有如預期的作動(解決辦法 : 改成做使用鍵盤操控飛機。)</span></p>
 <p><span>2.因不熟悉軟體所以會發生模擬時零件亂飛，本體亂動。(解決辦法 : 嘗試將各個零件設為動態物件或非動態物件)</span></p>
 <p></p>
 <h1>Final Report</h1>
-<p>youtube : </p>
+<h2>Youtube</h2>
+<p></p>
+<p>youtube影片:</p>
+<p></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QmZ_ai0HMuE" width="560"></iframe></p>
+<p></p>
+<h2>PDF</h2>
 <p><a href="/downloads/2021-協同產品設計實習-stage1-ag2.pdf">pdf</a></p>
 <p></p>
 <p></p>
